[package]
name = "kvproto"
version = "0.0.1"
keywords = ["TiKV"]

[lib]
name = "kvproto"

[dependencies]
protobuf = { version = "1.*", features = ["with-bytes"] }
futures = "0.1"
bytes = "0.4"

[dependencies.grpc]
git = "https://github.com/pingcap/grpc-rs.git"
features = ["static-link"]
branch = "busyjay/write-buffer"
